@@ -1,3 +1,9 @@
+2002-02-13  Per Bothner  <per@bothner.com>
+
+	* Char.java:  No longer implements Printable.
+	Thus no gnu.text no longer depends on gnu.mapping.
+	(print):  Remove method.
+
 2002-01-29  Per Bothner  <per@bothner.com>
 
 	* SyntaxException.java (header):  New field.
